--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,3 +2,11 @@ spring:
   jpa:
     generate-ddl: true
     
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
